Fixed Safari homepage rendering bug on small screens

--- a/assets/styles/pages/_index.scss
+++ b/assets/styles/pages/_index.scss
@@ -89,6 +89,10 @@ body.index {
       .project-row {
         flex-direction: column;
       }
+      
+      .project {
+        flex: 1 1 auto;
+      }
     }
   }
   
